--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
          <link href="css/styles.css" rel="stylesheet" media="screen">
     </head>
             <body>
+                    <nav class="navbar navbar-default">
+                            <div class="container container-fluid">
+                                    <div class="navbar-header">
+                                        <a href="navbar-header">
+                                        <img src="https://images7.alphacoders.com/704/704934.jpg" class="img-navbar"> </img>
+                                        </a>
+                                    </div>
+                             </div>
+                    </nav>
                 <div class="container"> 
                     <div class="row">
                         <div class="col-md-4 columna_1">
@@ -36,8 +45,8 @@
                         </div>
                 </div>
                 <div class="row">
-                        <div class="col-md-8 col-md-offset-3 columna_1">
-                            centrado
+                        <div class="col-md-5 col-md-offset-3 columna_1">
+                            <img src="https://res.cloudinary.com/teepublic/image/private/s--ZwW5jvZF--/t_Preview/b_rgb:191919,c_limit,f_jpg,h_630,q_90,w_630/v1488647544/production/designs/1290799_1.jpg" class="img-responsive"> </img>
                         </div>
                 </div>
                 </div>
